--- a/paper/manuscript.tex
+++ b/paper/manuscript.tex
@@ -115,9 +115,6 @@
 
 Correspondence concerning this article should be addressed to Atsuko Tominaga, Quellenstraße 51, 1100 Vienna, Austria. E-mail: Tominaga\_Atsuko@phd.ceu.edu}
 \keywords{teaching, expertise, skill transmission, artistic expression, music\newline\indent Word count: X}
-\usepackage{lineno}
-
-\linenumbers
 \usepackage{csquotes}
 \ifxetex
   % Load polyglossia as late as possible: uses bidi with RTL langages (e.g. Hebrew, Arabic)
@@ -171,7 +168,7 @@ Two or three sentences to provide a \textbf{broader perspective}, readily compre
 \hypertarget{participants}{%
 \subsubsection{2.1.1. Participants}\label{participants}}
 
-We recruited 36 piano experts who played the piano for at least the past 10 years or were studying piano performance at a music school at the time of recruitment. For data analysis, we excluded 5 participants due to experimental errors (3; performances were not recorded for one or more blocks, or participants played the piece in an octave higher), an overall deviated tempo (2). As a result, 31 participants (15 female) were included in data analysis. Most participants were right handed (left; 2, both; 2). They had 12.45 years of practice on average (\emph{SD} = 5.66). All participants gave their informed consent before the experiment started and received vouchers for their participation. The study was approved by the United Ethical Review Committee for Research in Psychology (EPKEB) in Hungary.
+We recruited 36 piano experts who played the piano for at least the past 10 years or were studying piano performance at a music school at the time of recruitment. For data analysis, we excluded 5 participants due to experimental errors (3), an overall deviated tempo (2). As a result, 31 participants (15 female) were included in data analysis. Most participants were right handed (left; 2, both; 2). They had 12.45 years of practice on average (\emph{SD} = 5.66). All participants gave their informed consent before the experiment started and received vouchers for their participation. The study was approved by the United Ethical Review Committee for Research in Psychology (EPKEB) in Hungary.
 
 \hypertarget{apparatus-and-stimuli}{%
 \subsubsection{2.1.2. Apparatus and stimuli}\label{apparatus-and-stimuli}}
@@ -185,7 +182,7 @@ One musical excerpt was used as a stimulus. The excerpt was taken from ``A Dozen
 
 In order to ensure that participants had sufficient motor skills to perform the piece, we asked them to practise the piece with the non-expressive sheet music (\emph{Figure \ref{fig:stimuli}, A}). Once they could perform the piece without pitch errors twice consecutively within 5 attempts, the experiment started.
 
-First, participants were allocated to either the teaching or performing condition and asked to practise the excerpt the excerpt with notated expressions of either articulation or dynamics (\emph{Figure \ref{fig:stimuli}, B-C}). As soon as they had produced the excerpt with notated expressions without pitch errors twice consecutively, the test trials began.
+First, participants were allocated to either the teaching or performing condition and asked to practise the excerpt with notated expressions of either articulation or dynamics (\emph{Figure \ref{fig:stimuli}, B-C}). As soon as they had produced the excerpt with notated expressions without pitch errors twice consecutively, the test trials began.
 
 In the teaching condition, participants were instructed to play the excerpt of music as if they were teaching it to students. It was mentioned that the students already knew the sequence of the tones and that they were trying to learn how to perform the piece with notated expressions by listening to the participant's performance. In the performing condition, participants were asked to play the excerpt of music as if they were performing it to an audience. Participants played the piece 8 times per expressive technique per condition, so there were 32 trials in total (2 conditions x 2 expressive techniques x 8 trials). The order of the conditions was counterbalanced across participants. The order of the expressive techniques within each condition was also counterbalanced across participants. A leading metronome (80 beats per minute, 8 beats) indicated the target tempo before each trial.
 
@@ -198,7 +195,7 @@ The experiment had two factors; Condition (teaching vs.~performing) and Expressi
 
 Three dependent variables were computed for data analysis. Interonset intervals (IOIs) are the intervals between onsets of adjacent notes and provide a tempo of tempo. Key-overlap time (KOT) is the difference between the offset time of the current tone (i.e., key release time) and the onset time of the ensuing tone and measures the smoothness of musical sequences (Bresin \& Battel, 2000). A positive value indicates smooth legato styles due to overlap between the current and ensuing tone whereas a negative value indicates sharp staccato styles due to separation between the current and ensuing tone. Tone intensity is assessed by key velocity (KV) and measures the loudness of a musical note. The value of KV in MIDI varies between 0 (minimum) and 127 (maximum).
 
-Data cleaning, preprocessing and statistical analysis were performed in R version 3.6.3. Pitch errors were identified separately for onsets and offsets by comparing the participants' performance with the sheet music. Three trials were entirely excluded from data analysis because participants did not follow sheet music or complete performing till the end. We manually removed accidental pitch errors produced by participants. Pitch errors included either extra, missing or substituted tones. For onsets, 5.16\% of the trials contained at least one pitch error (extra notes; 2.78\%, missing notes; 2.24\%, substituted notes; 0.13\%). For offsets, 6.24\% of the trials contained at least one pitch error (extra notes; 2.78\%, missing notes; 2.29\%, substituted notes; 1.17\%). After we removed pitch errors, outliers for IOIs, KOT and KV were defined as values more than 3 standard deviations from the mean of each dependent variable and were excluded from data analysis. Removed outliers were less than 5\% of overall responses for each dependent variable.
+Data cleaning, preprocessing and statistical analysis were performed in R version 3.6.3. Three trials were entirely excluded from data analysis because participants did not follow sheet music or complete performing till the end. Pitch errors were identified by comparing a sequence of musical notes produced by a participant with the sequence of musical notes according to the sheet music. Pitch errors included either extra, missing or substituted tones and were manually removed. For onsets, 5.16\% of the trials contained at least one pitch error (extra notes; 2.78\%, missing notes; 2.24\%, substituted notes; 0.13\%). For offsets, 6.24\% of the trials contained at least one pitch error (extra notes; 2.78\%, missing notes; 2.29\%, substituted notes; 1.17\%). After we removed pitch errors, outliers for IOIs, KOT and KV were defined as values more than 3 standard deviations from the mean of each dependent variable and excluded from data analysis. Removed outliers were less than 5\% of overall responses for each dependent variable.
 
 We performed separate analyses for the two expressive techniques (i.e., articulation, dynamics). Paired-sample \emph{t}-tests were performed to compare the mean IOIs in the teaching and performing condition. For KOT and KV, we performed a 2 x 2 repeated-measures analysis of variance (ANOVA) with the factors Condition (teaching vs.~performing) and Subcomponent (LS; legato vs.~staccato or FP; forte vs.~piano, respectively). The ``aov\_car" function in the afex package was used for a repeated-measures ANOVA. For post-hoc comparisons, we used emmeans package to investigate interactions fomr the ANOVA.
 
@@ -211,11 +208,23 @@ We performed separate analyses for the two expressive techniques (i.e., articula
 \hypertarget{results-articulation}{%
 \subsection{2.2. Results (Articulation)}\label{results-articulation}}
 
+All effects are reported as significant at \emph{p} \textless{} .05. We first report results for performance the piece with the notated expression of articulation (\emph{Figure \ref{fig:stimuli}, B}). followed by performance of the piece with the notated expression of dynamics (\emph{Figure \ref{fig:stimuli}, C}).
+
 \hypertarget{interonset-intervals-iois}{%
 \subsubsection{2.2.1. Interonset Intervals (IOIs)}\label{interonset-intervals-iois}}
 
+In order to compare the mean IOIs between the teaching and performing condition, we used a Wiscoxon Signed-rank test, instead of a paired \emph{t}-test, because the Shapiro-Wilk test showed that the difference\ldots{} was significantly different from the normal distribution.
+
+The Wisconxin Signed-rank test revealed\ldots.
+
+\includegraphics{manuscript_files/figure-latex/ioi-art-1-1.pdf}
+
 \hypertarget{key-overlap-time-kot}{%
 \subsubsection{2.2.2. Key-Overlap Time (KOT)}\label{key-overlap-time-kot}}
+
+A two-way repeated-measures ANOVA with the factors Condition (teaching vs.~performing) and Subcomponent-LS (legato vs.~staccato) revealed that there was a significant main effect of Subcomponent-LS (F) and a significant interation betweenC Condition and Subcomponent-LS (F). Post-hoc comparisons showed that participants produced shorter staccato in the teaching condition than in the performing condition (t) whereas there was no significant difference in legato between the teaching and performing condition (t).
+
+We also calculated KOR\ldots{}
 
 \hypertarget{key-velocity-kv}{%
 \subsubsection{2.2.3. Key Velocity (KV)}\label{key-velocity-kv}}
